# Pilot-proposal-for-Triage-Rules-based-risk-model-

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
api/: dependencies.py  index.py  main.py
api/routes/: assess.py  decisions.py  examples.py  health.py
clinical_nlp/: __init__.py  config.py
clinical_nlp/adapters/: __init__.py  base.py  synthetic.py
clinical_nlp/ner/: __init__.py  entity_ruler.py
clinical_nlp/phrase_matcher/: __init__.py  context_window.py  negation.py  severity.py
clinical_nlp/pipeline/: __init__.py  orchestrator.py
clinical_nlp/preprocessing/: __init__.py  text_cleaner.py
clinical_nlp/rules_engine/: __init__.py  chest_pain_safety.py  engine.py  entity_scorer.py  priority_mapper.py  symptom_flags.py
clinical_nlp/schemas/: __init__.py  decision.py  input.py  outcome.py  output.py
clinical_nlp/vitals/: __init__.py  escalation_rules.py  scorer.py  thresholds.py
data/synthetic/: sample_notes.jsonl
frontend/: index.html  outcome.html  vercel.json
frontend/static/: app.js  outcome.js  style.css
tests/: conftest.py
tests/api/: test_assess_endpoint.py
tests/integration/: test_adapter_interface.py  test_pipeline_end_to_end.py
tests/unit/: test_negation.py  test_rules_engine.py  test_text_cleaner.py  test_vitals_scorer.py
