[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-risk-engine"
version = "0.1.0"
description = "Rules-based clinical NLP risk stratification engine"
requires-python = ">=3.11"
dependencies = [
    "spacy>=3.7,<4.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "coverage>=7.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["clinical_nlp*", "api*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
